workshop03/task01/deploy_db.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws3-deploy-db
  labels:
    name: ws3-deploy-db
spec:
  replicas: 1
  selector:
    matchLabels:
      name: ws3-pod-db
  template:
    metadata:
      name: ws3-pod-db
      labels:
        name: ws3-pod-db
    spec:
      volumes:
      - name: ws3-vol-db
        persistentVolumeClaim:
          claimName: ws3-pvc-db
      containers:
      - name: ws3-container
        image: stackupiss/bgg-database:v1
        imagePullPolicy: IfNotPresent
        ports:
        - name: ws3-port-db
          containerPort: 3306
        volumeMounts:
        - name: ws3-vol-db
          mountPath: /var/lib/mysql

---
apiVersion: v1
kind: Service
metadata:
  name: ws3-svc-db
  labels:
    name: ws3-svc-db
spec:
  type: ClusterIP
  selector:
    name: ws3-pod-db
  ports:
  - port: 3306
    targetPort: ws3-port-db
