workshop03/task01/deploy_v1.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws3-deploy-v1
  labels:
    name: ws3-deploy-v1
spec:
  replicas: 3
  selector:
    matchLabels:
      name: ws3-pod-v1
  template:
    metadata:
      name: ws3-pod-v1
      labels:
        name: ws3-pod-v1
    spec:
      containers:
      - name: ws3-container-v1
        image: stackupiss/bgg-backend:v1
        imagePullPolicy: IfNotPresent
        args:
          - --prefix
          - /v1
        ports:
        - name: port-v1
          containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: ws3-svc-v1
  labels:
    name: ws3-svc-v1
spec:
  type: ClusterIP
  selector:
    name: ws3-pod-v1
  ports:
  - port: 80
    targetPort: port-v1
